# workspace-governance-control-fabric

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-image.yaml  validate.yaml
apps/api/: README.md
apps/api/src/wgcf_api/: __init__.py  app.py
apps/cli/: README.md
apps/cli/src/wgcf_cli/: __init__.py  main.py
apps/worker/: README.md
apps/worker/src/wgcf_worker/: __init__.py  __main__.py  main.py
dev-integration/profiles/governance-control-fabric/: README.md  profile.yaml
dev-integration/profiles/governance-control-fabric/scripts/: _proposed-profile.sh  access.sh  common.sh  down.sh  promote-check.sh  reset.sh  smoke.sh  status.sh  up.sh
docs/architecture/: context-governance-gateway-integration.md  governance-operations-console-readiness.md  project-structure.md
docs/operations/: operator-surface.md
examples/: governance-manifest.example.json
migrations/: env.py
migrations/versions/: 0001_create_foundation_tables.py
policies/opa/: admission.rego  policy_ledger.rego  validation_blocking.rego
schemas/: art-evidence-packet.schema.json  art-readiness-receipt.schema.json  evidence-projection.schema.json  governance-manifest.schema.json  ledger-event.schema.json  policy-decision.schema.json  runtime-governance-record.schema.json  validation-receipt.schema.json
scripts/: validate_project.py
tests/: test_api.py  test_art_readiness.py  test_catalog_manifest.py  test_database_foundation.py  test_dev_integration_profile.py  test_evidence_projection.py  test_foundation.py  test_graph_ingestion.py  test_graph_persistence.py  test_graph_queries.py  test_lifecycle.py  test_manifests.py  test_operator_surfaces.py  test_performance_budgets.py  test_policy_admission.py  test_runtime_governance_records.py  test_source_snapshots.py  test_validation_execution.py  test_validation_planning.py  test_worker.py
