[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-governance-control-fabric"
version = "0.1.0"
description = "Runtime implementation foundation for the Workspace Governance Control Fabric."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Workspace Governance" }
]
dependencies = [
  "alembic>=1.13,<1.15",
  "fastapi>=0.115,<0.116",
  "psycopg[binary]>=3.2,<3.3",
  "sqlalchemy>=2.0,<2.1",
  "starlette>=0.46,<0.47",
  "uvicorn[standard]>=0.30,<0.35"
]

[project.optional-dependencies]
test = [
  "anyio>=4.0,<4.10",
  "httpx>=0.27,<0.29"
]

[project.scripts]
wgcf = "wgcf_cli.main:main"

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "apps/cli/src",
  "packages/control_fabric_core/src"
]
